# SemIO

./: README.md  powershell.ps1
badges/: latest-release.shields
dotnet/Semio/: Semio.cs
dotnet/Semio.Grasshopper/: Resources.Designer.cs  Resources.resx  Semio.Grasshopper.cs  build-value-lists.ps1
dotnet/Semio.Grasshopper.Tests/: tests.gh
dotnet/Semio.Grasshopper/UserObjects/: Cache Kit.ghuser  Directory.ghuser  Geometry Preview.ghuser  Interpolate Designs.ghuser  Load Design.ghuser  Merge Designs.ghuser  Normalize Design.ghuser  Parent Directory.ghuser  Performance Assessment.ghuser  Port Preview.ghuser  Preview Port.ghuser  Select Design.ghuser  Select Piece.ghuser  Select Quality.ghuser  Select Representation.ghuser  Select Type.ghuser  Separator.ghuser  Show Design.ghuser
engineering/: build.ps1  dataarchitecture.pu  dictionary.csv  interfacearchitecture.txt  mimes.csv
graphql/: schema.graphql
icons/: build.ps1  rename.ps1
jsonschema/: design-context.json  design-prediction.json  design.json  kit.json  type-context.json  type.json
logo/: build.ps1
meta/: dictionary.csv
openapi/: schema.json
python/engine/: build.ps1  engine.py  pyproject.toml
sqlite/: schema.sql
tests/: kit_metabolism.json
webstack/sketchpad/src/renderer/src/: App.tsx  semio.d.ts  semio.ts
yak/: uploaded.txt
